--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               <div>8</div>
               <div>9</div>
             </div>
-            <!-- <div class="numbers">
+            <div class="numbers">
               <div>4</div>
               <div>5</div>
               <div>6</div>
@@ -31,7 +31,7 @@
               <div>1</div>
               <div>2</div>
               <div>3</div>
-            </div> -->
+            </div>
             <div class="numbers">
               <div>0</div>
               <div>.</div>
